force-app/main/default/objects/Agent_Step__c/Agent_Step__c.object-meta.xml
<CustomObject>
    <description>Provides a full audit trail for apex agent runs.</description>
    <label>Agent Step</label>
    <nameField>
        <displayFormat>AS-{0000}</displayFormat>
        <label>Agent Step Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agent Steps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>