force-app/main/default/objects/Agent_Step__c/fields/Agent_Run__c.field-meta.xml
<CustomField>
    <fullName>Agent_Run__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Which Agent Run is this step associated with?</description>
    <inlineHelpText>Which Agent Run is this step associated with?</inlineHelpText>
    <label>Agent Run</label>
    <referenceTo>Agent_Run__c</referenceTo>
    <relationshipLabel>Agent Steps</relationshipLabel>
    <relationshipName>Agent_Steps</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>