force-app/main/default/objects/Agent_Step__c/fields/Completion_Tokens__c.field-meta.xml
<CustomField>
    <fullName>Completion_Tokens__c</fullName>
    <description>Output (completion) tokens the model reported for this LLM call.</description>
    <inlineHelpText>Output (completion) tokens the model reported for this LLM call.</inlineHelpText>
    <label>Completion Tokens</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>