force-app/main/default/objects/Agent_Step__c/fields/LLM_Request__c.field-meta.xml
<CustomField>
    <fullName>LLM_Request__c</fullName>
    <description>Payload sent to the LLM.</description>
    <inlineHelpText>Payload sent to the LLM.</inlineHelpText>
    <label>LLM Request</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>