force-app/main/default/objects/Agent_Step__c/fields/LLM_Response__c.field-meta.xml
<CustomField>
    <fullName>LLM_Response__c</fullName>
    <description>Response returned from the LLM for this step.</description>
    <inlineHelpText>Response returned from the LLM for this step.</inlineHelpText>
    <label>LLM Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>