force-app/main/default/objects/Agent_Step__c/fields/Prompt_Tokens__c.field-meta.xml
<CustomField>
    <fullName>Prompt_Tokens__c</fullName>
    <description>Input (prompt) tokens the model reported for this LLM call.</description>
    <inlineHelpText>Input (prompt) tokens the model reported for this LLM call.</inlineHelpText>
    <label>Prompt Tokens</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>