force-app/main/default/objects/Agent_Step__c/fields/Step_Type__c.field-meta.xml
<CustomField>
    <fullName>Step_Type__c</fullName>
    <label>Step Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Plan</fullName>
            </value>
            <value>
                <fullName>LLMCall</fullName>
                <label>LLM Call</label>
            </value>
            <value>
                <fullName>ToolCall</fullName>
            </value>
            <value>
                <fullName>InvalidTool</fullName>
            </value>
            <value>
                <fullName>ToolResult</fullName>
            </value>
            <value>
                <fullName>Reflection</fullName>
            </value>
            <value>
                <fullName>Summary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>