force-app/main/default/objects/Agent_Step__c/fields/Tool__c.field-meta.xml
<CustomField>
    <fullName>Tool__c</fullName>
    <description>Which tool(Agent_Tool_Definition__mdt) was used for this step.</description>
    <inlineHelpText>Which tool(Agent_Tool_Definition__mdt) was used for this step.</inlineHelpText>
    <label>Tool</label>
    <length>100</length>
    <type>Text</type>
</CustomField>