force-app/main/default/objects/Agent_Step__c/fields/Tool_Input__c.field-meta.xml
<CustomField>
    <fullName>Tool_Input__c</fullName>
    <description>Payload sent to the tool used in this step.</description>
    <inlineHelpText>Payload sent to the tool used in this step.</inlineHelpText>
    <label>Tool Input</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>