force-app/main/default/objects/Agent_Step__c/fields/Tool_Output__c.field-meta.xml
<CustomField>
    <fullName>Tool_Output__c</fullName>
    <description>Response payload from the tool used in this step.</description>
    <inlineHelpText>Response payload from the tool used in this step.</inlineHelpText>
    <label>Tool Output</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>