force-app/main/default/objects/Agent_Step__c/fields/Total_Tokens__c.field-meta.xml
<CustomField>
    <fullName>Total_Tokens__c</fullName>
    <description>Total tokens the model reported for this LLM call.</description>
    <inlineHelpText>Total tokens the model reported for this LLM call.</inlineHelpText>
    <label>Total Tokens</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>